--- a/movies/templates/movies/show.html
+++ b/movies/templates/movies/show.html
@@ -54,6 +54,12 @@
                             Delete
                         </a>
                         {% endif %}
+                        {% if user.is_authenticated %}
+                        <a class="btn btn-danger"
+                        href="{% url 'movies.report_review' id=template_data.movie.id review_id=review.id %}">
+                            Report
+                        </a>
+                        {% endif %}
                     </li>
                     {% endfor %}
                 </ul>
